Fixed bug caused by last commit on mobile

--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ footer{
 		max-width: 100%;
 	}
 
-	#header-bar > span{
+	#header-bar > a{
 		display: none;
 	}
 
